# training_results_v2.0

ASUSTeK/systems/: ESC8000A-E11-8xA100-PCIE-80GB-NVBridge.json  ESCN4A-E11.json
Azure/: package_checker_params  summary.csv
Azure/systems/: ND96amsr_A100_v4_n16_pytorch.json  ND96amsr_A100_v4_n1_merlin_hugectr.json  ND96amsr_A100_v4_n1_mxnet.json  ND96amsr_A100_v4_n1_pytorch.json  ND96amsr_A100_v4_n2_pytorch.json  ND96amsr_A100_v4_n4_pytorch.json  ND96amsr_A100_v4_n8_mxnet.json  ND96amsr_A100_v4_n8_pytorch.json  ND96amsr_A100_v4_n9_mxnet.json
Baidu/systems/: 1_node_8_A100_PyTorch.json  IPU_POD16_PaddlePaddle.json  IPU_POD64_PaddlePaddle.json  XMan4.0_1_node_8_A100_PaddlePaddle.json
CASIA/systems/: XIANGXUE-3B_A100-PCIE-40GBx16_7773X_mxnet.json  XIANGXUE-3B_A100-PCIE-40GBx16_7773X_pytorch.json  XIANGXUE-3B_A100-PCIE-80GBx16_7763_mxnet.json  XIANGXUE-3B_A100-PCIE-80GBx16_7763_pytorch.json  XIANGXUE-3B_A100-PCIE-80GBx16_7773X_pytorch.json  XIANGXUE-3B_A100-PCIE-80GBx16_7773X_tensorflow.json
Dell/systems/: 16xXE8545x4A100-SXM-40GB.json  2xXE8545x4A100-SXM-40GB.json  2xXE8545x4A100-SXM-80GB.json  32xXE8545x4A100-SXM-40GB.json  4xXE8545x4A100-SXM-40GB.json  4xXE8545x4A100-SXM-80GB.json  8xXE8545x4A100-SXM-40GB.json  DSS8440x8xA30-NVBRIDGE.json  R750xax4A100-PCIE-80GB-NVBRIDGE.json  R750xax4A100-PCIE-80GB.json  XE8545x4A100-SXM-40GB.json  XE8545x4A100-SXM-80GB.json
Fujitsu/systems/: gx_A100x8_hugectr_NGC_22.04.json  gx_A100x8_mxnet_NGC_22.04.json  gx_A100x8_pytorch_NGC_22.04.json
GIGABYTE/: README.md  summary.csv
GIGABYTE/benchmark/ssd/implementations/pytorch/csrc/dali_box_iou/: CMakeLists.txt
GIGABYTE/systems/: G492-ID0_hugectr.json  G492-ID0_mxnet.json  G492-ID0_pytorch.json  G492-ID0_tensorflow.json
Google/benchmarks/: README.md
Google/benchmarks/maskrcnn/implementations/maskrcnn-cloud-tpu-v4-4096-TF/pycocotools/: CMakeLists.txt  annotation.h  coco.h
Google/benchmarks/maskrcnn/implementations/maskrcnn-cloud-tpu-v4-4096-TF/pycocotools/python/: CMakeLists.txt  coco.cc  coco.clif  coco_clif.h  coco_init.cc
Google/systems/: cloud-tpu-v4-2048-TF.json  cloud-tpu-v4-4096-TF.json  cloud-tpu-v4-6912-TF.json  cloud-tpu-v4-8192-TF.json  research-tpu-v4-256-TF.json
Graphcore-mlperf-v2.0-submission/systems/: ipu-pod128-POPART-closed.json  ipu-pod16-POPART-closed.json  ipu-pod16-PaddlePaddle-closed.json  ipu-pod256-POPART-closed.json  ipu-pod64-POPART-closed.json  ipu-pod64-PaddlePaddle-closed.json  ipu-pod64-TF1-closed.json
Graphcore/systems/: ipu-pod128-TF1-closed.json  ipu-pod16-TF1-closed.json  ipu-pod256-TF1-closed.json  ipu-pod64-POPART-open.json
H3C/: package_checker_params  summary.csv
H3C/systems/: 2R5500G5-Intelx8A100-SXM-80GB.json  R4900G5x1A100-PCIE-80GB.json  R5300G5x4A100-PCIE-80GB.json  R5300G5x4A100-SXM-80GB.json  R5300G5x8A100-PCIE-80GB.json  R5500G5-AMDx8A100-SXM-80GB.json  R5500G5-Intelx8A100-SXM-80GB.json
HPE/systems/: HPE-ProLiant-XL675D-Gen10-Plus_A100-SXM4-80GB_mxnet.json  (+1 more)
HazyResearch/: LICENSE.md  README.md  summary.csv
Inspur/: summary.csv
Inspur/systems/: nf5488a5_hugectr.json  (+6 more)
Krai/: README.md
MosaicML/: README.md
NVIDIA/: LICENSE.md  README.md  package_checker_params
Nettrix/: README.md  summary.csv
SUPERMICRO/: summary.csv
Supermicro2/: result_summarizer.txt  summary.csv
(+4605 files in other folders)
